<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calculator">

    <Button
        android:id="@+id/btn_calculator_back"
        android:layout_width="86dp"
        android:layout_height="52dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:text="@string/btn_calculator_back_menu"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_calculator_title"
        android:layout_width="200dp"
        android:layout_height="65dp"
        android:text="@string/tv_calculator_title"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.158" />

    <EditText
        android:id="@+id/et_height"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:hint="@string/et_height"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/tv_calculator_title"
        app:layout_constraintStart_toStartOf="@+id/tv_calculator_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_calculator_title" />

    <EditText
        android:id="@+id/et_width"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:hint="@string/et_width"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/et_height"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_height"
        app:layout_constraintTop_toBottomOf="@+id/et_height" />

    <EditText
        android:id="@+id/et_length"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:hint="@string/et_length"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/et_width"
        app:layout_constraintStart_toStartOf="@+id/et_width"
        app:layout_constraintTop_toBottomOf="@+id/et_width" />

    <Button
        android:id="@+id/btn_run_formula"
        android:layout_width="184dp"
        android:layout_height="77dp"
        android:layout_marginTop="15dp"
        android:text="@string/btn_run_formula"
        app:layout_constraintEnd_toEndOf="@+id/et_length"
        app:layout_constraintStart_toStartOf="@+id/et_length"
        app:layout_constraintTop_toBottomOf="@+id/et_length" />

    <TextView
        android:id="@+id/tv_calculation_result"
        android:layout_width="200dp"
        android:layout_height="66dp"
        android:layout_marginTop="15dp"
        android:clickable="false"
        android:hint="@string/tv_calculation_result"
        android:longClickable="false"
        android:textAlignment="center"
        android:textIsSelectable="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_run_formula"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="@+id/btn_run_formula"
        app:layout_constraintTop_toBottomOf="@+id/btn_run_formula" />

</androidx.constraintlayout.widget.ConstraintLayout>