...

    <TextView
        android:id="@+id/tv_visitor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:labelFor="@id/et_visitor_name"
        android:text="@string/tv_visitor"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_menu_title"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="@+id/tv_menu_title"
...
        app:layout_constraintEnd_toEndOf="@+id/tv_visitor"
        app:layout_constraintStart_toStartOf="@+id/tv_visitor"
        app:layout_constraintTop_toBottomOf="@+id/tv_visitor"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/bt_launch_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/bt_next_menu"
        app:layout_constraintEnd_toEndOf="@+id/et_visitor_name"
        app:layout_constraintStart_toStartOf="@+id/et_visitor_name"
...
