...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuScreen">

    <TextView
        android:id="@+id/menu_screen_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textSize="24sp"
        android:textAlignment="center"
        android:gravity="center"
...
